2017-03-07  Mikael Magnusson  <mikachu@gmail.com>

	* 40780: Completion/Unix/Command/_mount: Don't use =~ for simple
	prefix match

2017-03-05  Barton E. Schaefer  <schaefer@zsh.org>

	* Sebastian: 40726: Doc/Zsh/mod_curses.yo, Src/Modules/curses.c,
	configure.ac: add "zcurses resize" for sane terminal size change

2017-03-04  Barton E. Schaefer  <schaefer@zsh.org>

	* Sebastian: 40781: Src/params.c, Test/A06assign.ztst: optimize
	array assignment, similar to 39995 for string assignment

	* 40654: Src/exec.c: exit cleanly from special POSIXBUILTINS in
	subshells

2017-03-04  Oliver Kiddle  <opk@zsh.org>

	* unposted (github): Christoffer Aasted:
	Completion/Unix/Command/_ant: allow -Dproperty=/path_complete

	* unposted (from Ferenc- via github): Completion/Unix/Command/_gcc:
	Add newer C++ standard options to gcc completion

	* unposted: Completion/Unix/Command/_tmux: complete 'tiled' layout

	* unposted: Completion/Unix/Command/_xz: fix argument to --format

	* 40715: Completion/Unix/Command/_git: update for git 2.12.0

	* 40597: Completion/BSD/Command/_sysrc,
	Completion/Base/Utility/_values: be flexible about order of
	options to _values

2017-03-03  Peter Stephenson  <p.stephenson@samsung.com>

	* Sebastian: 40170: Src/Modules/curses.c: Fix up error number
	resetting in curses module.  This appears to resolve an issue
	mentioned in comments but attributed elsewhere, so remove
	confusion here.

	* 40173: Test/V11db_gdbm.ztst: don't report an error if gdbm
	module doesn't load as this simply causes the test to be skipped.

	* 40702: Doc/Zsh/zle.yo, Src/Zle/zle_params.c: add
	KEYS_QUEUED_COUNT variable to ZLE parameters.

2017-03-02  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 40681: Src/Modules/datetime.c: strftime builtin should
	return 1 if zstrftime() returns -1.

2017-03-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 40622 (typos fixed): Doc/Zsh/builtins.yo, Src/builtin.c,
	Src/math.c, Test/C04funcdef.ztst: add functions -Ms for